Replace placeholder images with actual image files

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 <!-- Main wolf -->
                 <div class="group col-span-2 md:col-span-2 bg-zinc-900 p-4 rounded-3xl overflow-hidden border border-transparent hover:border-pink-500 transition-all">
                     <div class="relative">
-                        <img src="https://i.imgur.com/placeholder-for-your-nft.jpg" 
+                        <img src="Laser.jpg" 
                              alt="Signature Lunar Howl Wolf"
                              class="w-full aspect-square object-cover rounded-2xl wolf-glow">
                         <div class="absolute top-4 right-4 bg-black/70 text-xs px-3 py-1 rounded-full backdrop-blur">1/1 SIGNATURE</div>
@@ -453,11 +453,11 @@
                 
                 <!-- Placeholder wolves -->
                 <div class="group bg-zinc-900 p-4 rounded-3xl overflow-hidden border border-transparent hover:border-purple-500 transition-all">
-                    <img src="https://picsum.photos/id/1015/600/600" class="w-full aspect-square object-cover rounded-2xl grayscale group-hover:grayscale-0 transition-all">
+                    <img src="IMG.jpg" class="w-full aspect-square object-cover rounded-2xl grayscale group-hover:grayscale-0 transition-all">
                     <div class="mt-4 text-sm">LUNAR HOWL #0420 • Epic</div>
                 </div>
                 <div class="group bg-zinc-900 p-4 rounded-3xl overflow-hidden border border-transparent hover:border-cyan-500 transition-all">
-                    <img src="https://picsum.photos/id/237/600/600" class="w-full aspect-square object-cover rounded-2xl grayscale group-hover:grayscale-0 transition-all">
+                    <img src="Laser.jpg" class="w-full aspect-square object-cover rounded-2xl grayscale group-hover:grayscale-0 transition-all">
                     <div class="mt-4 text-sm">LUNAR HOWL #0690 • Legendary</div>
                 </div>
                 <div class="group bg-zinc-900 p-4 rounded-3xl overflow-hidden border border-transparent hover:border-orange-500 transition-all">
