Replace image sources with 'Glass.jpg'

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <!-- Wolf silhouette or your NFT as emerging element -->
     <div class="relative w-64 h-64 md:w-80 md:h-80 mx-auto opacity-0 animate-wolf-emerge">
       <img 
-        src="YOUR_WOLF_NFT_IMAGE_URL_HERE"  <!-- ← Replace with your uploaded wolf image URL -->
+        src="Glass.jpg"  
         alt="Lunar Howl Wolf Emerging"
         class="w-full h-full object-contain drop-shadow-[0_0_60px_#ff00ff88] filter brightness-150 contrast-125"
       >
@@ -461,7 +461,7 @@
                     <div class="mt-4 text-sm">LUNAR HOWL #0690 • Legendary</div>
                 </div>
                 <div class="group bg-zinc-900 p-4 rounded-3xl overflow-hidden border border-transparent hover:border-orange-500 transition-all">
-                    <img src="https://picsum.photos/id/201/600/600" class="w-full aspect-square object-cover rounded-2xl grayscale group-hover:grayscale-0 transition-all">
+                    <img src="Glass.jpg" class="w-full aspect-square object-cover rounded-2xl grayscale group-hover:grayscale-0 transition-all">
                     <div class="mt-4 text-sm">LUNAR HOWL #0888 • Mythic</div>
                 </div>
             </div>
