Enhance banner image with styling classes
Added classes to the banner image for styling.

--- a/index.html
+++ b/index.html
@@ -483,7 +483,8 @@
                         </ul>
                     </div>
                     <div class="md:pl-12 border-l-2 border-pink-500/30 md:border-l-0 md:border-r-2">
-                        <img src="Banner.jpg">
+                        <img src="Banner.jpg" class="rounded-2xl w-full">
+                    </div>>
                     </div>
                 </div>
                 
