--- a/index.html
+++ b/index.html
@@ -547,7 +547,9 @@
       45 wolves already howling. Be the 46th.
     </p>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-lg mx-auto">
+    <!-- Vertical Stack -->
+    <div class="flex flex-col gap-6 max-w-md mx-auto">
+      
       <!-- Twitter / X -->
       <a 
         href="https://x.com/Lunar_Howl" 
@@ -559,7 +561,7 @@
         <div class="font-black text-2xl mt-1">@Lunar_Howl</div>
       </a>
 
-      <!-- Discord (placeholder) -->
+      <!-- Discord -->
       <div 
         onclick="alert('Discord link coming at launch! 🐺')"
         class="bg-zinc-900 hover:bg-zinc-800 p-8 rounded-3xl transition-all group cursor-pointer"
@@ -569,15 +571,6 @@
         <div class="font-black text-2xl mt-1">Coming Soon</div>
       </div>
 
-      <!-- Telegram (placeholder) -->
-      <div 
-        onclick="alert('Telegram link coming soon 🔥')"
-        class="bg-zinc-900 hover:bg-zinc-800 p-8 rounded-3xl transition-all group cursor-pointer"
-      >
-        <i class="fa-brands fa-telegram text-5xl group-hover:text-cyan-400 transition-colors"></i>
-        <div class="mt-6 text-sm uppercase tracking-wider">TELEGRAM</div>
-        <div class="font-black text-2xl mt-1">Coming Soon</div>
-      </div>
     </div>
   </div>
 </section>
