--- a/index.html
+++ b/index.html
@@ -538,42 +538,30 @@
             </div>
         </div>
     </section>
+  </section>
 
-    <!-- COMMUNITY SECTION -->
-<section id="community" class="py-24 bg-black">
-  <div class="max-w-6xl mx-auto px-6 text-center">
-    <h2 class="text-6xl font-black mb-4">JOIN THE PACK</h2>
-    <p class="max-w-md mx-auto text-xl text-gray-400 mb-16">
-      45 wolves already howling. Be the 46th.
-    </p>
-
-    <!-- Vertical Stack -->
-    <div class="flex flex-col gap-6 max-w-md mx-auto">
-      
-      <!-- Twitter / X -->
-      <a 
-        href="https://x.com/Lunar_Howl" 
-        target="_blank"
-        class="bg-zinc-900 hover:bg-zinc-800 p-8 rounded-3xl transition-all group"
-      >
-        <i class="fa-brands fa-x-twitter text-5xl group-hover:text-pink-400 transition-colors"></i>
-        <div class="mt-6 text-sm uppercase tracking-wider">X / TWITTER</div>
-        <div class="font-black text-2xl mt-1">@Lunar_Howl</div>
-      </a>
-
-      <!-- Discord -->
-      <div 
-        onclick="alert('Discord link coming at launch! 🐺')"
-        class="bg-zinc-900 hover:bg-zinc-800 p-8 rounded-3xl transition-all group cursor-pointer"
-      >
-        <i class="fa-brands fa-discord text-5xl group-hover:text-indigo-400 transition-colors"></i>
-        <div class="mt-6 text-sm uppercase tracking-wider">DISCORD</div>
-        <div class="font-black text-2xl mt-1">Coming Soon</div>
-      </div>
-
-    </div>
-  </div>
-</section>
+    <!-- COMMUNITY -->
+    <section id="community" class="py-24 bg-black">
+        <div class="max-w-6xl mx-auto px-6 text-center">
+            <h2 class="text-6xl font-black mb-4">JOIN THE PACK</h2>
+            <p class="max-w-md mx-auto text-xl text-gray-400">45 wolves already howling. Be the 46th.</p>
+            
+            <div class="grid grid-cols-3 gap-6 mt-16 max-w-lg mx-auto">
+                <a href="https://x.com/Lunar_Howl" target="_blank" 
+                   class="bg-zinc-900 hover:bg-zinc-800 p-8 rounded-3xl transition-all group">
+                    <i class="fa-brands fa-x-twitter text-5xl group-hover:text-pink-400 transition-colors"></i>
+                    <div class="mt-6 text-sm">X / TWITTER</div>
+                    <div class="font-black text-2xl">@Lunar_Howl</div>
+                </a>
+                <div onclick="alert('Discord link coming at launch! 🐺')" 
+                     class="bg-zinc-900 hover:bg-zinc-800 p-8 rounded-3xl transition-all group cursor-pointer">
+                    <i class="fa-brands fa-discord text-5xl group-hover:text-indigo-400 transition-colors"></i>
+                    <div class="mt-6 text-sm">DISCORD</div>
+                    <div class="font-black text-2xl">soon</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- FOOTER -->
     <footer class="bg-black border-t border-white/10 py-16">
         <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-8">
