--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             </div>
             
             <button onclick="mintWolf()" 
-                    class="mint-button w-full max-w-xs mx-auto block py-8 text-3xl font-black bg-white text-black hover:bg-gradient-to-r hover:from-pink-500 hover:to-cyan-500 hover:text-white transition-all rounded-none border-4 border-white">
+                    class="mint-button w-full max-w-xs mx-a:from-pink-500 hover:to-cyan-500 hover:text-white transition-all rounded-none border-4 border-white">
                     HOWL &amp; CLAIM
             </button>
             
