Fix mint button pulse logic in index.html

--- a/index.html
+++ b/index.html
@@ -711,9 +711,9 @@
             
             // Demo mint button pulse
             setInterval(() => {
-                const btn = document.querySelector('#mint button');
+                co
                 if(btn) btn.classList.add('scale-105');
-                setTimeout(() => btn.classList.remove('scale-105'), 400);
+                setTimeout
             }, 2800);
         };
         
